# Projekt_PEA_ETAP2

./: CMakeLists.txt  main.cpp
Algorithms/: BFS.cpp  BFS.h  BoundCalculator.cpp  BoundCalculator.h  BranchAndBound.cpp  BranchAndBound.h  DFS.cpp  DFS.h  LowestCost.cpp  LowestCost.h
Utils/: ConfigFile.cpp  ConfigFile.h  FIFOQueue.h  FileReader.cpp  FileReader.h  Matrix.cpp  Matrix.h  Node.h  PriorityQueue.h  Queue.h  Result.h  Stack.h  Test.cpp  Test.h
